--- a/components/Icon/styles.module.scss
+++ b/components/Icon/styles.module.scss
@@ -5,7 +5,7 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 1em;
-	vertical-align: middle;
+	vertical-align: text-top;
 
 	&.labeled {
 		margin-right: 2px;
